--- a/src/views/pages/dashboard/styles/dashboard.css
+++ b/src/views/pages/dashboard/styles/dashboard.css
@@ -8,10 +8,105 @@
     white-space: nowrap; /* Запретит перенос элементов */
 
 }
+.delete-task{
+    color: black;
+    /* background-color: red; */
+    /* text-decoration: black; */
+}
+.delete-task:hover{
+    /* color: black; */
+    background-color: rgb(245, 132, 132);
+    border-radius: 10px;
+    padding: 2px;
+}
+
+.add-task-container{
+    display: unset;
+    /* justify-content: center; */
+}
+
+
+.add-task{
+    color: rgb(0, 0, 0);
+    padding: 5px;
+    border-radius: 8px;
+    margin: 10px;
+    background-color: white;
+}.add-task:hover{
+    color: rgb(0, 0, 0);
+    padding: 5px;
+    border-radius: 8px;
+    margin: 10px;
+    /* border: solid; */
+    /* border-color: white; */
+    background-color: #d0d4db;
+}
+/* .flex{
+    min-width: 90%;
+} */
+
+
+.time-part p{
+    /* background-color: rgb(232, 127, 0); */
+    line-height: 1;
+    font-size: 10px;
+    color: rgb(194, 16, 16);
+}
 .center {
     display: flex;
     gap: 20px; 
     padding: 20px;
+}
+.droppable {
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #f1f2f4;
+    width: 300px; 
+    height: fit-content;
+    text-align: center;
+    cursor: grabbing;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    user-select: none;
+    overflow-wrap: break-word;
+}
+.droppable h1, p {
+    color: black;
+    padding-bottom: 5px;
+    font-size: 15px;
+}
+.draggable {
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    cursor: grab;
+    height: auto;
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+.draggable h5{
+    color: black;
+}
+.priority-critical{
+    color: red;
+    font-weight: bold;
+}
+.priority-high {
+  color: orange;
+  font-weight: bold;
+}
+.priority-medium {
+  color: rgb(51, 51, 143);
+}
+.priority-low {
+  color: green;
+}
+.status{
+    padding: 8px;
+    display: flex;
+    justify-content: space-between;
 }
 .add-list{
     padding: 10px;
@@ -22,11 +117,26 @@
     opacity: 90%;
     /* margin: 10px; */
     text-align: center;
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: space-around; */
     /* cursor: grabbing; */
     /* overflow-x: hidden; */
     user-select: none;
     
     /* overflow-wrap: break-word; */
 }
+
+.status-name {
+    max-width: 150px;
+    display: inline-block;
+    white-space: normal; /* Позволяет переносить слова */
+    word-break: break-word;
+    overflow-wrap: break-word;
+    text-align: center;
+}
+
+
+
+
+
+
