--- a/src/views/pages/auth/index.html
+++ b/src/views/pages/auth/index.html
@@ -1,35 +1,37 @@
 
-<link rel="stylesheet" href="login/style.css">
+
 <!-- <link rel="stylesheet" href="login/index.js"> -->
-<script src="login/index.js">
-    
-</script>
-<h2>Weekly Coding Challenge #1: Sign in/up Form</h2>
+<body>
+	<link rel="stylesheet" href="login/style.css">
+<h2>Task Manager</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
 		<form action="#">
 			<h1>Create Account</h1>
-			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
-			<span>or use your email for registration</span>
-			<input type="text" placeholder="Name" />
 			<input type="email" placeholder="Email" />
+			<input type="text" placeholder="Имя" />
+			<input type="text" placeholder="Фамилия" />
 			<input type="password" placeholder="Password" />
+			<input type="number" placeholder="Номер Телефона" />
+			<!-- <input type="text" placeholder="Телеграм айди" /> -->
+			<select id="users" v-model="newTask.assigned"  @change="console.log('assigned', newTask.assigned)">
+				<option v-for="user in users" :key="user.id" :value="Number(user.id)">
+					{{ user.first_name }}  
+				</option>
+			</select> 
+				<br><br>
+				<label class="label-name">Название проекта:</label>
+				<select v-model="newTask.projects"  @change="console.log('project', newTask.projects)">
+<option v-for="project in projects" :key="project.id" :value="project.id">
+{{ project.project_name }}
+</option>
+</select>
 			<button>Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
 		<form action="#">
 			<h1>Sign in</h1>
-			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
-			<span>or use your account</span>
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
@@ -51,12 +53,7 @@
 		</div>
 	</div>
 </div>
-
-<footer>
-	<p>
-		Created with <i class="fa fa-heart"></i> by
-		<a target="_blank" href="https://florin-pop.com">Florin Pop</a>
-		- Read how I created this and how you can join the challenge
-		<a target="_blank" href="https://www.florin-pop.com/blog/2019/03/double-slider-sign-in-up-form/">here</a>.
-	</p>
-</footer>
+<script src="login/auth.js">
+    
+</script>
+</body>
