--- a/src/auth/login/style.css
+++ b/src/auth/login/style.css
@@ -15,7 +15,13 @@ body {
 	height: 100vh;
 	margin: -20px 0 50px;
 }
-
+/* form,select,input{
+	color: black;
+	background-color: black;
+} */
+/* .register{
+	color: red;
+} */
 h1 {
 	font-weight: bold;
 	margin: 0;
@@ -71,7 +77,8 @@ button.ghost {
 }
 
 form {
-	background-color: #FFFFFF;
+	background-color: #000000;
+	color: #000000;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -82,7 +89,8 @@ form {
 }
 
 input {
-	background-color: #eee;
+	background-color: #000000;
+	color: #000000;
 	border: none;
 	padding: 12px 15px;
 	margin: 8px 0;
@@ -90,7 +98,7 @@ input {
 }
 
 .container {
-	background-color: #fff;
+	background-color: #000000;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
