--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -72,6 +72,7 @@ button.ghost {
 
 form {
 	background-color: #FFFFFF;
+	color: black;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -83,6 +84,7 @@ form {
 
 input {
 	background-color: #eee;
+	color: black;
 	border: none;
 	padding: 12px 15px;
 	margin: 8px 0;
@@ -90,7 +92,7 @@ input {
 }
 
 .container {
-	background-color: #fff;
+	background-color: #000000;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
