--- a/src/views/pages/dashboard/styles/dashboard.css
+++ b/src/views/pages/dashboard/styles/dashboard.css
@@ -2,7 +2,8 @@
     min-width: max(80%, 140vh); /* Ширина адаптируется ко всем браузерам */
     height: 85vh;
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgb(34, 122, 238) 0%, rgb(14, 68, 174) 48%, rgb(13, 203, 236) 100%);
+    background: linear-gradient(55deg,rgb(34, 122, 238) 0%, rgb(14, 68, 174) 48%, rgb(13, 203, 236) 100%);
+    /* (90deg, rgb(34, 122, 238) 0%, rgb(14, 68, 174) 48%, rgb(13, 203, 236) 100%); */
     overflow-x: scroll; /* Горизонтальный скролл */
     display: flex; /* Растянет внутренние элементы в строку */
     white-space: nowrap; /* Запретит перенос элементов */
