--- a/src/views/pages/dashboard/styles/dashboard.css
+++ b/src/views/pages/dashboard/styles/dashboard.css
@@ -9,17 +9,17 @@
     white-space: nowrap; /* Запретит перенос элементов */
 
 }
-/* .delete-task{
-    color: black;
-    /* background-color: red; */
-    /* text-decoration: black; */
+* { 
+    margin : 0;
+    padding: 0;
+    box-sizing : border-box;
+    font-familly : "Poppins", sans-serif;
+  }
 
-/* .delete-task:hover{
-    /* color: black; */
-    /* background-color: rgb(245, 132, 132); */
-    /* border-radius: 10px; */
-    /* padding: 2px; */
-
+.form1{
+    display: flex; 
+    justify-content: space-between; gap: 8px;
+}
 
 .add-task-container{
     display: unset;
