--- a/src/auth/login/style.css
+++ b/src/auth/login/style.css
@@ -1,5 +1,3 @@
-/*  */
-
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
@@ -16,6 +14,9 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	height: 100vh;
 	margin: -20px 0 50px;
+}
+input,form,select{
+    color: black;
 }
 
 h1 {
