--- a/src/components/dashboard/styles/dashboard.css
+++ b/src/components/dashboard/styles/dashboard.css
@@ -15,7 +15,12 @@
     box-sizing : border-box;
     font-familly : "Poppins", sans-serif;
   }
-
+.project-name{
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 20px;
+}
 .form1{
     display: flex; 
     justify-content: space-between; gap: 8px;
