--- a/src/views/pages/business_process/Processes/style/style.css
+++ b/src/views/pages/business_process/Processes/style/style.css
@@ -61,14 +61,27 @@
     font-size: 30px;
     color: #FFF;
   
-    z-index: 3;
+    z-index: 4;
+    position: relative;
+  }
+  .ag-courses-item_title2 {
+    min-height: 87px;
+    margin: 0 0 25px;
+  
+    overflow: hidden;
+  
+    font-weight: bold;
+    /* font-size: 30px; */
+    color: #FFF;
+  
+    z-index: 4;
     position: relative;
   }
   .ag-courses-item_date-box {
     font-size: 18px;
     color: #FFF;
   
-    z-index: 3;
+    z-index: 4;
     position: relative;
   }
   .ag-courses-item_date {
@@ -84,7 +97,7 @@
     width: 128px;
     background-color: #f934ec;
   
-    /* z-index: 4; */
+    z-index: 1;
     position: absolute;
     top: -75px;
     right: -75px;
@@ -142,8 +155,10 @@
     }
     .ag-courses-item_link {
       padding: 22px 40px;
+      z-index: 4;
     }
     .ag-courses-item_date-box {
       font-size: 16px;
+      z-index: 4;
     }
   }
