--- a/src/views/pages/reports/style/style.css
+++ b/src/views/pages/reports/style/style.css
@@ -44,7 +44,7 @@
   .ag-courses-item_link:hover,
   .ag-courses-item_link:hover .ag-courses-item_date {
     text-decoration: none;
-    color: #FFF;
+    /* color: #FFF; */
   }
   .ag-courses-item_link:hover .ag-courses-item_bg {
     -webkit-transform: scale(10);
